--- a/FallDetectionSystemDataProcessor/FallDetectionSystemDataProcessor.csproj
+++ b/FallDetectionSystemDataProcessor/FallDetectionSystemDataProcessor.csproj
@@ -82,6 +82,7 @@
     <Compile Include="FeatureExtractor11.cs" />
     <Compile Include="FeatureExtractor2.cs" />
     <Compile Include="FeatureExtractor3.cs" />
+    <Compile Include="FeatureExtractor4.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IRawDataExtractor.cs" />
