--- a/FallDetectionSystemDataProcessor/FallDetectionSystemDataProcessor.csproj
+++ b/FallDetectionSystemDataProcessor/FallDetectionSystemDataProcessor.csproj
@@ -83,6 +83,8 @@
     <Compile Include="FeatureExtractor2.cs" />
     <Compile Include="FeatureExtractor3.cs" />
     <Compile Include="FeatureExtractor4.cs" />
+    <Compile Include="FeatureExtractor5.cs" />
+    <Compile Include="FeatureExtractor6.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IRawDataExtractor.cs" />
@@ -94,6 +96,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="License-LGPL.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pythonscript\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Accord.3.7.0\build\Accord.targets" Condition="Exists('..\packages\Accord.3.7.0\build\Accord.targets')" />
